<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/view_title_bar"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_tab_untreated_send_paper_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sendPaperTab1"
                android:textColor="@color/red"
                android:gravity="center"/>
            <View
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="@color/divierColor"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tv_tab_passed_send_paper_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/default_text_color"
                android:text="@string/sendPaperTab2"
                android:gravity="center"/>
            <View
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="@color/divierColor"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tv_tab_back_send_paper_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/default_text_color"
                android:text="@string/sendPaperTab3"
                android:gravity="center"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_send_paper_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>

</LinearLayout>