<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="24dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="6dp"
            android:background="@color/white"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/date_daily_home_page_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:textColor="@color/daily_title_drak_blue_homepage"
                android:text="@string/date_list_homepage_title"
                android:layout_marginTop="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divierColor"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="@string/time_date_list_homepage_title"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:text="@string/people_date_list_homepage_title"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:text="@string/detail_date_list_homepage_title"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divierColor"
                />
            <ScrollView
                android:layout_width="wrap_content"
                android:scrollbars="none"
                android:layout_height="match_parent">
            <com.chinasoft.ctams.view.MyListView
                android:id="@+id/lv_date_daily_home_page"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:divider="@color/divierColor"
                android:dividerHeight="0.5dp"
                android:scrollbars="none">
            </com.chinasoft.ctams.view.MyListView>
            </ScrollView>
            </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>